--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " dump-analysis",
   "main": "index.js",
   "scripts": {
-    "analysis": "node ./src/index.js"
+    "analysis": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
   "homepage": "https://github.com/menglingyu659/crash-analysis#readme",
   "dependencies": {
     "compressing": "^1.9.0",
+    "esbuild": "^0.18.3",
     "fs-extra": "^11.1.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^20.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
